--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ quora_username: # your Quora username
 contact_note: >
   The best way to contact me is via e-mail :) .
 
-google_analytics: UA-XXXXXXXXX # out your google-analytics code
+google_analytics: UA-171777712-1 # out your google-analytics code
 
 # -----------------------------------------------------------------------------
 # Collections
