--- a/_config.yml
+++ b/_config.yml
@@ -83,9 +83,9 @@ panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: My blog # your blog must have a name for it to show up in the nav bar
-blog_description: a simple whitespace theme for academics
-permalink: /blog/:year/:title/
+blog_name: # your blog must have a name for it to show up in the nav bar
+blog_description:
+permalink:
 
 # Pagination
 pagination:
