--- a/.github/workflows/broken-links.yml
+++ b/.github/workflows/broken-links.yml
@@ -14,8 +14,5 @@ jobs:
         uses: lycheeverse/lychee-action@v1.9.0
         with:
           fail: true
+          # removed md files that include liquid tags
           args: --exclude-path README.md --exclude-path _pages/404.md --exclude-path _pages/blog.md --exclude-path _posts/2018-12-22-distill.md --verbose --no-progress './**/*.md' './**/*.html'
-          # Adjust options for external links or retries
-          skip-external: false  # Set to true to ignore external links
-          retry-count: 3        # Number of retries for external links
-          timeout: 20s          # Increase timeout for slow external links
