--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Node.js ⚙️
         uses: actions/setup-node@v4
-      - name: Install Prettier 💾
-        run: npm install --save-dev --save-exact prettier @shopify/prettier-plugin-liquid
-      - name: Prettier Check 🔎
-        run: npx prettier . --check
+      # - name: Install Prettier 💾
+      #   run: npm install --save-dev --save-exact prettier @shopify/prettier-plugin-liquid
+      # - name: Prettier Check 🔎
+      #   run: npx prettier . --check
